# Animate_Banana

./: .gitignore  debug_box.py  debug_box_scaling.py  pyproject.toml  render_raster_points.py  segment_nodes.py
docker/: Dockerfile  init.sh  init_env.sh  start_annotators.sh
examples/animation/1806.08246v2-Figure1-1/: alpha_mask.tex  hop_bbox.tex  prog_reveal.tex  slide_bbox.tex
examples/animation/2015_07298601-Figure4-1subFig-1/: alpha_mask.tex  hop_bbox.tex  prog_reveal.tex  slide_bbox.tex
examples/animation/2305.00375v1-Figure4-1/: alpha_mask.tex  hop_bbox.tex  prog_reveal.tex  slide_bbox.tex
paper/: paper.tex
src/img_2_svg_pretraining/annotation_tool/: BUILD_REPORT.md  README.md  USER_MANUAL.md  __init__.py  app.py  compositor.py  datamodel.py  export_debug.py  ingest.py  pointops.py  sam3_backend.py  store.py
src/img_2_svg_pretraining/annotation_tool/tests/: test_datamodel.py  test_pointops.py
src/img_2_svg_pretraining/benchmark/: README.md  infer.py  models.py  run_benchmark.py  score.py
src/img_2_svg_pretraining/benchmark/metrics/: dino.py  judge.py
src/img_2_svg_pretraining/data_engine/: README.md  assemble.py  codegen.py  edges.py  judge.py  models.py  pointing.py  render.py  run_data_engine.py  samples.py  schema.py  segmentation.py
src/img_2_svg_pretraining/data_engine/boxing/: gemma4.py
src/img_2_svg_pretraining/data_engine/pointing/: README.md  __init__.py  common.py  models.py  molmo2.py  molmo_point.py
src/img_2_svg_pretraining/data_engine/sam_finetuning/: README.md  __init__.py  dataset.py  prepare_masks.py  (+3 more)
src/img_2_svg_pretraining/viewer/: README.md  annotations.db  app.py  compile.py  db.py
viewer/: README.md  app.py  samples.py
viewer/templates/: index.html
(+8 files in other folders)
