[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "img-2-svg-pretraining"
version = "0.1.0"
description = "Architecture diagram -> TikZ (Stage 1) viewer and evaluation framework"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "transformers>=4.49.0",
    "pillow>=10.0",
    "torch",
    "accelerate>=0.30",
    "flash-attn",
    "numpy<2",
    "cairosvg>=2.7",
    "streamlit>=1.38",
    "streamlit-image-coordinates>=0.4.0",
    "streamlit-shortcuts>=1.2",
    "streamlit-drawable-canvas>=0.9.3",
    "opencv-python>=4.9",
    "pycocotools>=2.0",
    "filelock>=3.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]
